07_retirement/grade.txt
Grading at Wed Apr 29 05:56:06 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘main’:
retirement.c:55:10: error: ‘EXIT_STATUS’ undeclared (first use in this function)
   return EXIT_STATUS;
          ^
retirement.c:55:10: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
